# pyaneti

./: .gitignore  README.md  pixi.toml  pyproject.toml  run_pyaneti.py
inpy/TOI-451-2gp-rvs-ngts/: input_fit.py
inpy/example_toyp2/: input_fit.py
src/: bayesian.f90  create_variables.py  default.py  frv.f90  ftr.f90  gprv_res.py  kernels.f90  mcmc.f90  multi-gp-routines.f90  output.py  plot_rv.py  plot_tr.py  plotting_functions.py  prepare_data.py  print_values.py  samplers.py  todo-py.py  todo.f90
