[build-system]
requires = [
    "meson>=1.0.1",
    "meson-python>=0.16.0",
    "numpy<=1.26.1",
    "ninja",          # optional but recommended
    "wheel"           # helps with pip install . and wheel builds
]
build-backend = "mesonpy"

[project]
name = "pyaneti"
version = "2.5.2"
description = "Python wrapper for Pyaneti Fortran core"
authors = [{ name = "Oscar Barragán" }]
license = { text = "GPLv3" }
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numpy<=1.26.1",
    "matplotlib",
    "seaborn",
    "pandas",
    "scipy",
    "pyastronomy",
    "tqdm",
    "emcee",
    "dynesty",
    "zeus",
]

